--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,19 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  naissance: 2015-04-30
-  sexe: MyString
-  etat_civil: MyString
-  pop_foyer: 1
-  pop_enfant: 1
-  pop_animaux: 1
-  revenus: MyString
-
-two:
-  naissance: 2015-04-30
-  sexe: MyString
-  etat_civil: MyString
-  pop_foyer: 1
-  pop_enfant: 1
-  pop_animaux: 1
-  revenus: MyString
+# This model initially had no columns defined.  If you add columns to the
+# model remove the '{}' from the fixture names and add the columns immediately
+# below each fixture, per the syntax in the comments below
+#
+one: {}
+# column: value
+#
+two: {}
+#  column: value
